tests/NormalTests/paczka1/fuzzy1/48881042.err
Error in line 6: qWA2vKm S448 20,3
Error in line 17: yZB S44 60,2
Error in line 2: L4G7kiCGTlS S448 37,5
Error in line 18: yZB S448 51,5
Error in line 24: yZB S602 33,2
Error in line 23: qWA2vKm A951 89,7
Error in line 22: A951 A951 1,6
Error in line 28: b0TWjX S602 17,4
Error in line 21: L4G7kiCGTlS A951 9,2
